<resources>
    <string name="app_name">CoviCare</string>

    <!--    Login/Signup Page String Variables-->
    <string name="enter_email">Enter E-mail</string>
    <string name="email">E-mail</string>

    <string name="signin_details">Sign-in Details</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="personal_details">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>

    <string name="contact_details">Contact Details</string>
    <string name="phone_number">Phone Number</string>

    <string name="donot_have_account">Don\'t have an account?</string>
    <string name="signup_instead">Sign Up</string>

    <string name="already_have_account">Already have an account?</string>
    <string name="login_instead">Login Up</string>

    <string name="login">Login</string>

    <string name="signup">Sign Up</string>

    <string name="next">Next</string>

    <string name="send_reset_password">Send Reset Password</string>

    <string name="reset_email_info">Enter Email Id to Send Reset Password Link</string>

    <string name="return_to_login">Return to Login?</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="verification_email_sent">Verification E-mail sent to</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="go_to_personal_details">Go to Personal Details</string>
    <string name="go_to_contact_details">Go to Contact Details</string>


    <!--    Menu Headers-->
    <string name="home">Home</string>
    <string name="vitals_history">Vitals History</string>
    <string name="added_groups">Added Groups</string>
    <string name="groups_added_to">Groups Added To</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="groups">Groups</string>
    <string name="share">Share</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="record_vitals">Record Vitals</string>
    <string name="one_time_record">One Time Record</string>
    <string name="continuous_monitor">Continuous Monitor</string>
    <string name="scan_ct_image">Scan CT Image</string>

    <string name="enter_group_name">Enter Group Name</string>
    <string name="enter_group_description">Enter Group Description</string>
    <string name="add_new_group">Add New Group</string>
    <string name="title_activity_group_data">GroupDataActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="online_users">Online Users</string>
    <string name="online_users_description">Online users are signed up to CoviCare. The vitals data for these users is stored locally on this device, however their personal and contact information is hosted in CoviCare servers."</string>
    <string name="local_users">Local Users</string>
    <string name="local_users_description">Local users are not signed up to CoviCare. The personal and contact information and the vitals data for these users is stored locally on this device.</string>
    <string name="submit">Submit</string>
    <string name="safety_net_api_key">AIzaSyA9T26TTUxIE4kWgv063QGocxE5PmwowKA</string>
    <string name="capture">Capture</string>
    <string name="device_key">Device Key</string>
    <string name="temperature">Temperature</string>
    <string name="spo2">SpO2</string>
    <string name="pulse">Pulse</string>
    <string name="cough_detected">Cough Detected</string>
    <string name="token_expiration_error">Token expired, please try again!</string>
    <string name="token_validation_error">Invalid token, please try again!</string>
    <string name="question">QUESTION</string>
    <string name="question1">Age</string>
    <string name="question2">Gender</string>
    <string name="question3">Do you have a family history of mental illness?</string>
    <string name="question4">Does your employer provide mental health benefits?</string>
    <string name="question5">Do you know the options for mental health care your employer provides?</string>
    <string name="question6">Is your anonymity protected if you choose to take advantage of mental health or substance abuse treatment resources?</string>
    <string name="question7">How easy is it for you to take medical leave for a mental health condition?</string>
    <string name="question8">If you have a mental health condition, do you feel that it interferes with your work?</string>
    <string name="return_back">Return</string>
    <string name="consider_treatment">Please visit a doctor for consultation</string>
    <string name="report_normal">Report normal!</string>
    <string name="app_tag">It\'s Vital, to Stay Safe</string>
    <string name="welcome_string">Welcome to,\nCoviCare</string>
    <string name="signup_welcome_string">Signup to CoviCare</string>
    <string name="uemail_hint_string">User Email</string>
    <string name="uname_hint_string">User Name</string>
    <string name="pass_hint_string">Password</string>
    <string name="forgot_pass_string">Forgot Password?</string>
    <string name="login_string">Login</string>
    <string name="new_user_string">New User? Sign Up</string>
    <string name="capture_image">Capture Image</string>
    <string name="pick_image">Pick Image</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="vital_history">Vital History</string>
    <string name="evaluate_mental_health">Mental Health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="positive">POSITIVE</string>
    <string name="negative">NEGATIVE</string>
    <string name="enter_age">Age</string>
    <string name="mental_health_evaluator">Mental Health Evaluator</string>
</resources>