<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.auth.ResetPasswordActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/reset_password_activity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/password_anim"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_email_info"
            android:textColor="@color/white_50"
            android:paddingHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="22sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/user_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            android:layout_marginVertical="5dp"

            android:hint="@string/enter_email"
            app:hintEnabled="true"
            app:hintTextColor="@color/purple_200"
            android:textColorHint="@color/white_800"

            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusBottomEnd="10dp"

            app:boxStrokeWidthFocused="2dp"
            app:boxStrokeColor="@color/purple_200"
            app:boxStrokeErrorColor="@color/error_400"
            app:startIconDrawable="@drawable/ic_outline_email_24"
            app:startIconTint="@color/white_800"
            app:endIconDrawable="@drawable/ic_outline_cancel_24"
            app:endIconTint="@color/white_800"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textColor="@color/white_50" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress_indicator"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:paddingVertical="7dp"
            android:indeterminateTint="@color/purple_200"
            android:layout_gravity="center"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_pswd_btn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/purple_200"
            android:fontFamily="@font/roboto_medium"
            android:paddingHorizontal="30dp"
            android:paddingVertical="7dp"
            android:text="@string/send_reset_password"
            android:textAllCaps="false"
            android:textColor="@color/black_900"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/return_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:transitionName="login_signup_tran"
            android:text="@string/return_to_login"
            android:textColor="@color/white_50"
            android:background="@color/transparent"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textAllCaps="false"/>

    </LinearLayout>
</ScrollView>